Added a debits page that displays the debits and allows a user to add new debits. The date portion needs to be adjusted to show current date

--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,22 @@
     transform: rotate(360deg);
   }
 }
+
+#DebitsTable {
+  display: inline-block;
+}
+
+#DescriptionDiv {
+  width: 400px;
+  text-align: left;
+}
+
+#AmountDiv {
+  width: 400px;
+  text-align: left;
+}
+#DateDiv {
+  padding-bottom: 20px;
+  width: 400px;
+  text-align: left;
+}
