--- a/src/App.css
+++ b/src/App.css
@@ -67,8 +67,14 @@
 
 .Links {
   padding: 10px;
+  color: white;
+  font-weight: bolder;
+  font-size: 1.2rem;
+  text-decoration: none;
 }
 
 .NavBars {
-  padding: 10px;
+  padding: 25px;
+  background-color: blue;
+  text-align: left;
 }
